# sello-protocol-hackathon

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  codama.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.atl/: skill-registry.md
Anchor/programs/workspace/: Cargo.toml
anchor/: Anchor.toml  Cargo.toml
anchor-legacy/: Anchor.toml  Cargo.toml
anchor-legacy/tests/: workspace.ts
anchor/programs/sello/: Cargo.toml
anchor/programs/sello/src/: lib.rs
anchor/tests/: sello.ts
app/: globals.css  layout.tsx  page.tsx
app/api/license/: route.ts
app/api/narrate/: route.ts
app/api/narrations/: route.ts
app/assets/: DESIGN.md  code.html
app/blog/protected-article/: page.tsx
app/components/: cluster-context.tsx  navigation-links.tsx  wallet-button.tsx
app/components/dashboard/: CreatorDashboardView.tsx
app/components/lifi/: SimulatedLiFiWidget.tsx
app/components/nav/: site-header.tsx
app/components/onboarding/: OnboardingShell.tsx
app/components/register/: RegisterArticle.tsx
app/components/sello/: LicenseResultCard.tsx  SelloCheckout.tsx
app/components/wallet/: connect-wallet-button.tsx
app/dashboard/: page.tsx
app/lib/: appwrite-config.ts  appwrite.ts
app/lib/sello/: constants.ts  license-parser.ts  meta.ts  skill-template.ts
app/lib/solana/: constants.ts  pda.ts  provider.ts  sello-program.ts
app/lib/wallet/: context.tsx
app/register/: page.tsx
docs/: architecture.md  demo-flow.md  limitations.md  postmortem.md
public/: llms.txt  rsl.txt  tdm-policy.json
server/: appwrite.json
(+13 files in other folders)
