[package]
name = "sello"
version = "0.1.0"
description = "Sello Protocol — on-chain content licensing for AI agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sello"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))'] }

[dependencies]
anchor-lang = { version = "0.31.1" }