[package]
name = "sello"
version = "0.1.0"
description = "Sello Protocol Proof of Consent Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sello"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
